--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@progress/kendo-data-query": "^1.5.6",
+    "@progress/kendo-drawing": "^1.16.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-animation": "^5.3.0",
+    "@progress/kendo-react-buttons": "^5.3.0",
+    "@progress/kendo-react-common": "^5.3.0",
+    "@progress/kendo-react-data-tools": "^5.3.0",
+    "@progress/kendo-react-dateinputs": "^5.3.0",
+    "@progress/kendo-react-dropdowns": "^5.3.0",
+    "@progress/kendo-react-inputs": "^5.3.0",
+    "@progress/kendo-react-intl": "^5.3.0",
+    "@progress/kendo-react-treeview": "^5.3.0",
+    "@progress/kendo-theme-default": "^5.4.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
